<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <Spinner
                android:id="@+id/kategorie"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:entries="@array/kategorie"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tytul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/kategorie"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:hint="@string/doodawanie_tytul"
                android:inputType="text" />

            <EditText
                android:id="@+id/opis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:hint="@string/dodawanie_opis"
                android:inputType="text|textMultiLine"
                android:layout_below="@id/tytul"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/skladniki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:hint="@string/dodawanie_skladniki"
                android:inputType="text|textMultiLine"
                android:layout_below="@id/opis"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/wykonanie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:hint="@string/dodawanie_wykonanie"
                android:inputType="text|textMultiLine"
                android:layout_below="@id/skladniki"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <ImageView
                android:id="@+id/zdjeciePrzepis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wykonanie"
                android:adjustViewBounds="true"
                android:maxHeight="250dp"
                />
            <Button
                android:id="@+id/zdjecie"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/zdjeciePrzepis"
                android:layout_centerHorizontal="true"
                android:text="@string/dodawanie_btn_zdjecie"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/zapisz"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/zdjecie"
                android:layout_centerHorizontal="true"
                android:onClick="zapisz"
                android:text="@string/dodawanie_btn_zapisz"/>

            <Button
                android:id="@+id/anuluj"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/dodawanie_btn_anuluj"
                android:onClick="anuluj"
                android:layout_below="@id/zapisz"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>